--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
   --font-miso: var(--font-miso);
   --font-sail: var(--font-sail);
   --font-believe-heart: var(--font-believe-heart);
+  --font-bualoy: var(--font-bualoy);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
